cambios por link imagen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div id="agrupar">
             <header id="cabecera">
-                     <img src="img/header.jpg">
+                     <img src="img/Header.jpg">
             </header>
         </div>
 
