--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
         <title>Principal</title>
         <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
         <link rel="stylesheet" href="estilo.css">
-         <script src="javascript.js"></script>
+
 
     </head>
 
     <body>
 
 
-    <div class="banner">
-        <div class="logo"> <img src="img/git_hub.png" > </div>
+    <div class="banner" >
+
+        <div class="logo" >  <a href="https://github.com/ckyonen/Proyecto_Final_Kyonen" > <img src="img/git_hub.png" >  </a> </div>
    </div>
 
 
