--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
         <title>Principal</title>
         <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
         <link rel="stylesheet" href="estilo.css">
-
-
     </head>
+
+
 
     <body>
 
 
+
     <div class="banner" >
-
         <div class="logo" >  <a href="https://github.com/ckyonen/Proyecto_Final_Kyonen" > <img src="img/git_hub.png" >  </a> </div>
-   </div>
+    </div>
 
 
-        <div id="agrupar">
-            <header id="cabecera">
-                     <img src="img/Header.jpg">
-            </header>
-        </div>
+    <div id="agrupar">
+         <header id="cabecera">
+               <img src="img/Header.jpg">
+          </header>
+    </div>
 
 
 
@@ -31,7 +31,7 @@
         <nav id="menu">
             <ul>
                 <li><a href="index.html">Principal</a></li>
-                <li><a href="Formulario.html">Contacto a</a></li>
+                <li><a href="Formulario.html">Contacto</a></li>
                 <div class="dropdown">
                     <button class="dropbtn">Links</button>
                     <div class="dropdown-content">
@@ -42,11 +42,6 @@
                 </div>
             </ul>
         </nav>
-
-
-
-
-
 
 
 
@@ -73,18 +68,23 @@
                             <li> Encargado de Sistema de RRHH</li>
                             <li> Encargado de Sistema de Producción en Faena</li>
                             <li> Encargado de Sistema de Contratos</li>
+                            <li> Encargado de Sistema Documentos Electrónicos</li>
                             <li> Encargado de Sistema Documentos Electronicos</li>
-                            <li> Encargado de Sistema Documentos Electronicos</li>
+                        </ul>
+                        <br>
+                        <h2>Manejo de Herramientas</h2>
+                        <ul>
+                            <li> Lenguajes de Programación Plex All Fusión y PHP</li>
+                            <li> Bases de Datos SQL Server y DB2</li>
                         </ul>
                         <br>
                         <h2>Desde Febrero del 2013</h2>
                     </hgroup>
-
                 </header>
-
-
-
             </article>
+
+
+
 
             <article>
                 <header>
@@ -100,16 +100,19 @@
                             <li> Consultor ABAP-SAP</li>
                             <li> Integracion de Sistemas informaticos</li>
                             <li> Desarrollo y Mantenciones realizadas para los Módulos de:</li>
-                            <li>  Finanzas</li>
-                            <li>  Controlling</li>
-                            <li>  Aprovisionamiento</li>
-                            <li>  Comercial</li>
-
+                            <li> Finanzas</li>
+                            <li> Controlling</li>
+                            <li> Aprovisionamiento</li>
+                            <li> Comercial</li>
                         </ul>
                         <br>
-
-
-                        <h2>Desde Febrero del 2008</h2>
+                        <h2>Manejo de Herramientas</h2>
+                        <ul>
+                            <li> Lenguajes de Programación ABAP</li>
+                            <li> Bases de Datos SQL Server y DB2</li>
+                        </ul>
+                        <br>
+                        <h2>Desde Enero del 2008</h2>
                     </hgroup>
                 </header>
             </article>
@@ -126,45 +129,52 @@
                         </div>
                         <ul>
                             <li> Desarrollo y Mantenciones realizadas para los Módulos de :</li>
-                            <li>  Finanzas</li>
-                            <li>  Controlling</li>
-                            <li>  Aprovisionamiento</li>
-                            <li>  Comercial</li>
-
+                            <li> Finanzas</li>
+                            <li> Controlling</li>
+                            <li> Aprovisionamiento</li>
+                            <li> Comercial</li>
                         </ul>
                         <br>
-
-
-
-                        <h2>Desde Febrero del 2003</h2>
+                        <h2>Manejo de Herramientas</h2>
+                        <ul>
+                            <li> Lenguajes de Programación C++,Visual Basic 6.0</li>
+                            <li> Bases de Datos SQL Server y DB2</li>
+                        </ul>
+                        <br>
+                        <h2>Desde Enero del 2003</h2>
                     </hgroup>
                 </header>
             </article>
+
+
 
 
             <div id="contenedor-dp">
                 <h1>DATOS PERSONALES</h1>
 
-
             <article>
                 <header>
 
                     <hgroup>
-
+                       <div class="dat_per">
                         <h2>Nombre : Christian Mauricio Kyonen Kyonen</h2>
+                        <br>
                         <h2>Direccion : Ing Julio Velasco 500</h2>
+                        <br>
                         <h2>Ciudad : Coquimbo</h2>
+                        <br>
                         <h2>Edad : 38 años</h2>
+                        <br>
                         <h2>Celular : +56976504813</h2>
+                        <br>
                         <h2>Mail : christiankyonen@gmail.com</h2>
-
+                        <br>
+                       </div>
 
 
                     </hgroup>
                 </header>
             </article>
-
-
             </div>
 
 
@@ -207,18 +217,29 @@
 
         <aside id="columna">
             <p> QUIEN SOY:
-                Ingeniero en Gestion Informatica
-                Con mas de 15 años de experiencia en el rubro de Retail y Mineria,
-                dominio en todos los aspectos en ciclo de desarrollo de Software,
-                desde levantamiento de requerimiento, analisis,diseños,desarrollo, Qa,
-                produccion y capacitacion a usuarios.
-
-                Manejo en Bases de Datos SQL y DB2 IBM
-                Manejo de Lengguajes C++,Java, PHP, Javascript, VB.
-
-
+                Profesional en Ingeniera en Gestión Informática egresado de la Universidad
+                INACAP, con más de 15 años de experiencia en la gestión de sistemas informáticos
+                en diversas empresas privadas en en el rubro de Retail y Minería.
             </p>
-
+            <br>
+            <p>
+                Durante su carrera a trabajado en varios proyectos desarrollando sistemas
+                para las áreas de Producción, Ventas, Compras, Recursos Humanos,Logistica
+                Contabilidad y Finanzas etc. liderando equipos de trabajos para lograr
+                Proyectos exitosos.
+            </p>
+            <br>
+            <p>
+                Dominio en todos los aspectos en ciclo de desarrollo de Software,
+                desde levantamiento de requerimiento, análisis, diseños, desarrollo, QA,
+                producción y capacitación a usuarios.
+            </p>
+            <br>
+            <p>
+                Manejo en Bases de Datos SQL y DB2 IBM
+                Manejo de Lenguajes C++,Visual Basic 6.0 y .NET,Java, PHP, Javascript.
+            </p>
+            <br>
 
 
 
