--- a/Formulario.html
+++ b/Formulario.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="estilo_css.css">
 
+
 </head>
 
 
@@ -30,7 +31,7 @@
 
 <div id="agrupar">
     <header id="cabecera">
-        <img src="img/header.jpg">
+        <img src="img/Header.jpg">
     </header>
 </div>
 
@@ -39,7 +40,7 @@
 
 <nav id="menu">
     <ul>
-        <li><a href="Index.html">Principal</a></li>
+        <li><a href="index.html">Principal</a></li>
         <li><a href="Formulario.html">Contacto</a></li>
         <div class="dropdown">
             <button class="dropbtn">Links</button>
@@ -147,14 +148,14 @@
 
 
 <footer id="pie">
-    Derechos Reservados &copy; 2010-2020
+    Derechos Reservados &copy; 2020
 </footer>
 
 
 
 
-<script src="js/bt_guardar.js"></script>
 
+<script src="js/bt_guardar.js"></script>
 
 </body>
 </html>
