--- a/Formulario.html
+++ b/Formulario.html
@@ -24,8 +24,8 @@
 
 
 
-<div class="banner">
-    <div class="logo"> <img src="img/git_hub.png" > </div>
+<div class="banner" >
+    <div class="logo" >  <a href="https://github.com/ckyonen/Proyecto_Final_Kyonen" > <img src="img/git_hub.png" >  </a> </div>
 </div>
 
 
