--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                        <div class="dat_per">
                         <h2>Nombre : Christian Mauricio Kyonen Kyonen</h2>
                         <br>
-                        <h2>Direccion : Ing Julio Velasco 500</h2>
+                        <h2>Dirección : Ing Julio Velasco 500</h2>
                         <br>
                         <h2>Ciudad : Coquimbo</h2>
                         <br>
@@ -216,7 +216,7 @@
 
 
         <aside id="columna">
-            <p> QUIEN SOY:
+            <p> <strong>QUIEN SOY:</strong>
                 Profesional en Ingeniera en Gestión Informática egresado de la Universidad
                 INACAP, con más de 15 años de experiencia en la gestión de sistemas informáticos
                 en diversas empresas privadas en en el rubro de Retail y Minería.
@@ -231,13 +231,14 @@
             <br>
             <p>
                 Dominio en todos los aspectos en ciclo de desarrollo de Software,
-                desde levantamiento de requerimiento, análisis, diseños, desarrollo, QA,
-                producción y capacitación a usuarios.
+                desde <strong> levantamiento de requerimiento, análisis, diseños, desarrollo, QA,
+                producción y capacitación a usuarios.</strong>
             </p>
             <br>
-            <p>
+            <p><strong>
                 Manejo en Bases de Datos SQL y DB2 IBM
                 Manejo de Lenguajes C++,Visual Basic 6.0 y .NET,Java, PHP, Javascript.
+
             </p>
             <br>
 
@@ -254,6 +255,8 @@
 
         <footer id="pie">
             Derechos Reservados &copy; 2010-2020
+            <br>
+            Coquimbo, Chile
         </footer>
     </body>
 </html>
